--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </p>
 --->
 
-<p><strong>Results:</strong></p>
+<p><strong>Results/My Impact:</strong></p>
 <ul class="project-results">
   <li>Enabled qualification of critical optical assemblies for deep-space deployment.</li>
   <li>Improved optical stability under thermal cycling, reducing alignment drift by ~40%.</li>
@@ -65,9 +65,19 @@
 
 
   <h3><a href="Projects/encoder.html"> Quadrature Amplitude Modulation (QAM) Optical Encoder (Testing/ Manufacturing)</a></h3>
-  <p>
+  <!--<p>
     Designed and built a compact optical encoder integrating IR sensors, QAM signal processing, and microcontroller logic to support RTV bond inspection in precision optics systems. Increased detection speed 4× and reduced reliance on commercial solutions.
   </p>
+  -->
+    <p><strong>Results/My Impact:</strong></p>
+    <ul class="project-results">
+      <li>Reduced RTV bond-pad inspection time by <strong>4×</strong> compared to commercial encoder systems.</li>
+      <li>Achieved ~<strong>0.2°</strong> angular resolution using dual IR reflective sensors in quadrature.</li>
+      <li>Designed and fabricated a custom encoder mount, reflective tape pattern, and alignment fixture for integration with air-bearing spindle.</li>
+      <li>Correlated encoder position data with live camera feed via MATLAB + Arduino, enabling calculation of RTV volume around each bond radius.</li>
+      <li>Bench-tested system on a precision step stage, verifying movement detection within <strong>±1 step</strong> before integration with production hardware.</li>
+      <li>Saved an estimated <strong>$10,000+</strong> by replacing a commercial inspection encoder with an in-house solution.</li>
+    </ul>
 
   <h3>  <a href="Projects/coldatom.html"> Cold Atom Laser System (Goodsell Lab, Middlebury College)(Testing/Design/Research)</a></h3>
   <p>
