--- a/Projects/encoder.html
+++ b/Projects/encoder.html
@@ -14,7 +14,7 @@
   <h1>Custom Optical Encoder for Bond Pad Inspection</h1>
 
   <p>
-    As part of my work in the optoelectronics group at Collins Aerospace, I developed a custom optical encoder system to estimate RTV (Room-Temperature Vulcanizing) adhesive volume in our bonded assemblies. The encoder was used to track the rotation of an air bearing spindle while a live camera feed recorded the bond interface in real-time. By correlating the angular position with image-derived thickness measurements, we calculated RTV distribution across the circumference of optical components.
+    As part of my work in the Optronics group at Collins Aerospace, I developed a custom optical encoder system to estimate RTV (Room-Temperature Vulcanizing) adhesive volume in our bonded assemblies. The encoder was used to track the rotation of an air bearing spindle while a live camera feed recorded the bond interface in real-time. By correlating the angular position with image-derived thickness measurements, we calculated RTV distribution across the circumference of optical components.
   </p>
 
   <h2>Designing the Encoder System</h2>
