--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </nav>
   <header>
     <h1>Masrur Chowdhury</h1>
-    <p>Systems Engineer · Physicist · Researcher</p>
+    <p>Engineer · Physicist · Researcher</p>
   </header>
 
 
