--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </p>
       
        <p>
-        I graduated from Middlebury College in 2024 with a degree in Physics, where I conducted astrophysics research and led an experimental cold atom project under SRPS grant funding. I also earned an engineering certificate from UCLA, strengthening my skills in model-based systems engineering and translating my physics and first-principles problem-solving into practical engineering applications.
+        I graduated from Middlebury College in 2024 with a degree in Physics, where I conducted astrophysics research and led an experimental cold atom project under Middlebury grant funding. I also earned an engineering certificate from UCLA, strengthening my skills in model-based systems engineering and translating my physics and first-principles problem-solving into practical engineering applications.
        </p>
 
         <p>
@@ -99,10 +99,18 @@
 
   <h3>  <a href="Projects/coldatom.html"> Cold Atom Laser System (Goodsell Lab, Middlebury College)(Testing/Design/Research)</a></h3>
   <p>
-    Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under SRPS grant funding.
+    Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under Middlebury grant funding.
   </p>
 
-  <h3>Silicon Prier adhesion test (Push and Shear) (Testing/Research)</h3>
+  <h3>Silicon Primer adhesion test (Push and Shear) (Testing/Research)</h3>
+    
+  <p><strong>Results/My Impact:</strong></p>
+    <ul class="project-results">
+    <li>Validated continued manufacturing of large optical assemblies with extended primer sit times beyond the manufacturer’s 24-hour guideline.</li>
+    <li>Push and shear testing at 1, 3, 5, 15, 21, 28, and 45 days showed no significant loss in bond strength under controlled conditions.</li>
+    <li>Identified humidity as the primary factor in long-term primer performance degradation.</li>
+    <li>Provided data-driven justification for flexible build schedules without compromising structural integrity.</li>
+  </ul>
 
  
   <h3>Count-Min Sketch- Randomized Algorithms (Programming)</h3>
