--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under Middlebury grant funding.
   </p>
 
-  <h3>Silicon Primer adhesion test (Push and Shear) (Testing/Research)</h3>
+  <h3><a href="Projects/primertest.html">Silicon Primer adhesion test (Push and Shear) (Testing/Research)</a>a></h3>
     
   <p><strong>Results/My Impact:</strong></p>
     <ul class="project-results">
