--- a/Projects/primertest.html
+++ b/Projects/primertest.html
@@ -3,52 +3,82 @@
 <head>
   <meta charset="UTF-8">
   <title>Silicone Primer Adhesion Test – Masrur Chowdhury</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <nav class="navbar">
     <a href="../index.html">← Back to Home</a>
+    <a href="../index.html#work">Selected Work</a>
   </nav>
 
   <main>
-    <h1>Silicone Primer Adhesion Test (Push & Shear)</h1>
+    <h1>Silicone Primer Adhesion Test (Push &amp; Shear)</h1>
 
     <p>
-      This project investigated the long-term bond strength of silicone primer–treated surfaces for large optical assemblies, where extended build times can cause primed parts to sit well beyond the manufacturer’s recommended 24-hour limit before adhesive application.
+      We evaluated adhesion strength for silicone‑primed optical assemblies with <em>extended sit times</em>
+      prior to bonding—relevant for larger builds with longer, staged workflows. The goal was to determine
+      whether assemblies remain within acceptable strength margins beyond the typical “prime‑and‑bond
+      within 24 hours” guidance, while identifying environmental factors that most affect performance.
     </p>
 
-    <h2>Objective</h2>
-    <p>
-      To determine whether primed surfaces retain sufficient adhesion strength after extended sit times, enabling more flexible manufacturing schedules without sacrificing structural integrity.
-    </p>
-
-    <h2>Methodology</h2>
+    <h2>Materials &amp; Variants</h2>
     <ul>
-      <li>Prepared test samples with primer applied to optical-grade substrates.</li>
-      <li>Allowed samples to sit for various durations: 1, 3, 5, 15, 21, 28, and 45 days before bonding.</li>
-      <li>Performed push and shear tests to measure bond strength at each interval.</li>
-      <li>Controlled and varied humidity levels to assess environmental impact on adhesion.</li>
+      <li><strong>Optical elements:</strong> Multiple lens/glass types (genericized).</li>
+      <li><strong>Housings (“pucks”):</strong> Anodized aluminum, chem‑film aluminum, and titanium.</li>
+      <li><strong>Surface preparation:</strong> Plasma pen cleaning prior to primer application.</li>
+      <li><strong>Bonding:</strong> Silicone primer + RTV adhesive (brand redacted for confidentiality).</li>
     </ul>
 
-    <h2>Results</h2>
+    <h2>Sit‑Time Matrix</h2>
+    <p>
+      Primed components were held for <strong>1, 3, 5, 15, 21, 28, and 45 days</strong> prior to bonding to map
+      adhesion vs. sit time. For each interval, we recorded environmental conditions and process timestamps
+      to ensure repeatability.
+    </p>
+
+    <h2>Test Rig &amp; Procedure</h2>
     <ul>
-      <li>Bond strength remained largely consistent across sit times up to 45 days under controlled humidity.</li>
-      <li>Humidity was identified as the dominant factor in primer performance degradation.</li>
-      <li>Validated safe use of extended sit times for large builds, providing flexibility in manufacturing workflows.</li>
+      <li><strong>Push test on CNC:</strong> Programmed a CNC to drive a load pin onto a <strong>pressure sensor</strong> through a
+          load‑spreading puck to apply force evenly across the glass surface.</li>
+      <li><strong>Shear configuration:</strong> Fixtures allowed both normal (push) and tangential (shear) loading modes.</li>
+      <li><strong>Instrumentation:</strong> Pressure sensor output logged vs. displacement; pass/fail and ultimate force captured.</li>
+      <li><strong>Process controls:</strong> Techs handled surface prep and primer; we recorded <strong>temperature, humidity,
+          primer dwell time, bond timing, and cure time</strong> for each sample set.</li>
+    </ul>
+
+    <!-- Optional illustrative image (generic) -->
+    <figure style="text-align:center;">
+      <img
+        src="../images/primer_push_shear_schematic.png"
+        alt="Illustrative push & shear test schematic with load-spreading pin and pressure sensor"
+        style="width:100%; max-width:680px; display:block; margin:20px auto; border-radius:8px;"
+      />
+      <figcaption style="font-size:.85em; color:gray;">
+        Generic schematic of push/shear rig with load distribution and pressure sensing (illustrative only).
+      </figcaption>
+    </figure>
+
+    <h2>Results</h2>
+    <ul class="project-results">
+      <li><strong>Sit time:</strong> No significant loss in adhesion strength up to <strong>45 days</strong> under controlled humidity for the materials/finishes tested.</li>
+      <li><strong>Material/finish effect:</strong> No clear, consistent difference in bond strength across lens types or housing finishes (anodized, chem‑film, titanium) within measurement uncertainty.</li>
+      <li><strong>Dominant factor:</strong> <strong>Humidity</strong> was the primary driver of long‑term primer performance variation.</li>
+      <li><strong>Process reliability:</strong> CNC‑driven push testing with a pressure sensor provided repeatable loading and clear failure thresholds for comparisons.</li>
     </ul>
 
     <h2>Impact</h2>
-    <p>
-      This testing provided data-backed confidence to proceed with extended primer sit times in certain optical assemblies, reducing schedule pressure and increasing throughput without compromising bond reliability.
+    <ul>
+      <li>Provided data‑backed justification to continue manufacturing large optical builds with extended primer sit times.</li>
+      <li>Reduced schedule pressure and rework risk by allowing more flexible staging prior to bonding.</li>
+      <li>Standardized prep and logging (plasma clean, primer dwell, environment tracking) improved reproducibility.</li>
+    </ul>
+
+    <p style="font-style:italic; color:gray;">
+      Notes: Brand names and proprietary values are intentionally omitted. Diagrams are illustrative and not representative of specific production hardware.
     </p>
 
-    <!-- Optional illustrative image -->
-    <figure>
-      <img src="../images/primer_test_generic.jpg" alt="Illustrative diagram of push & shear test setup" style="width: 100%; max-width: 600px; border-radius: 8px; margin: 20px 0;">
-      <figcaption style="font-size: 0.85em; color: gray;">
-        Generic push & shear test diagram (illustrative only; not actual project hardware).
-      </figcaption>
-    </figure>
+    <p><a href="../index.html#work">← Back to Selected Work</a></p>
   </main>
 
   <footer>
