--- a/index.html
+++ b/index.html
@@ -91,16 +91,28 @@
     <ul class="project-results">
       <li>Reduced RTV bond-pad inspection time by <strong>4×</strong> compared to commercial encoder systems.</li>
       <li>Achieved ~<strong>0.2°</strong> angular resolution using dual IR reflective sensors in quadrature.</li>
-      <li>Designed and fabricated a custom encoder mount, reflective tape pattern, and alignment fixture for integration with air-bearing spindle.</li>
+      <li>Designed and fabricated a custom encoder mount, reflective tape pattern, and alignment fixture for integration with the air-bearing spindle.</li>
       <li>Correlated encoder position data with live camera feed via MATLAB + Arduino, enabling calculation of RTV volume around each bond radius.</li>
       <li>Bench-tested system on a precision step stage, verifying movement detection within <strong>±1 step</strong> before integration with production hardware.</li>
       <li>Saved an estimated <strong>$10,000+</strong> by replacing a commercial inspection encoder with an in-house solution.</li>
     </ul>
 
+  <!--
   <h3>  <a href="Projects/coldatom.html"> Cold Atom Laser System (Goodsell Lab, Middlebury College)(Testing/Design/Research)</a></h3>
   <p>
     Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under Middlebury grant funding.
-  </p>
+  </p> -->
+
+    <h3><a href="Projects/cold_atom.html">Cold Atom Laser System (Goodsell Lab, Middlebury College)</a></h3>
+    <p><strong>Results:</strong></p>
+    <ul class="project-results">
+      <li>Improved the experimental test setup for observing quantum behaviors in laser-cooled rubidium atoms, enabling longer and more stable observation runs.</li>
+      <li>Introduced in-house fabrication of custom optical fibers, eliminating reliance on commercial pre-fabricated fibers and reducing lead times for experimental changes.</li>
+      <li>Achieved fiber splices retaining ~<strong>90% optical power</strong>, ensuring minimal loss between system components.</li>
+      <li>Streamlined fiber routing and integration, improving optical path flexibility and enabling faster reconfiguration between experiments.</li>
+      <li>Increased available testing and experimentation time by reducing fiber procurement and installation delays.</li>
+    </ul>
+
 
   <h3><a href="Projects/primertest.html">Silicon Primer adhesion test (Push and Shear) (Testing/Research)</a></h3>
     
