--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     Designed and assembled a 3-laser rubidium cooling system with fiber optic routing and thermal management. Integrated precision alignment tools to support quantum behavior observation under Middlebury grant funding.
   </p> -->
 
-    <h3><a href="Projects/cold_atom.html">Cold Atom Laser System (Goodsell Lab, Middlebury College)</a></h3>
+    <h3><a href="Projects/coldatom.html">Cold Atom Laser System (Goodsell Lab, Middlebury College)</a></h3>
     <p><strong>Results:</strong></p>
     <ul class="project-results">
       <li>Improved the experimental test setup for observing quantum behaviors in laser-cooled rubidium atoms, enabling longer and more stable observation runs.</li>
