--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </p> -->
 
     <h3><a href="Projects/coldatom.html">Cold Atom Laser System (Goodsell Lab, Middlebury College)</a></h3>
-    <p><strong>Results:</strong></p>
+    <p><strong>Results/My Impact:</strong></p>
     <ul class="project-results">
       <li>Improved the experimental test setup for observing quantum behaviors in laser-cooled rubidium atoms, enabling longer and more stable observation runs.</li>
       <li>Introduced in-house fabrication of custom optical fibers, eliminating reliance on commercial pre-fabricated fibers and reducing lead times for experimental changes.</li>
