--- a/index.html
+++ b/index.html
@@ -125,7 +125,14 @@
   </ul>
 
  
-  <h3>Count-Min Sketch- Randomized Algorithms (Programming)</h3>
+  <h3><a href="Projects/countminsketch.html"></a>Count-Min Sketch- Randomized Algorithms (Programming)</h3>
+  <p><strong>Results/My Impact:</strong></p>
+  <ul class="project-results">
+    <li>Found the most frequent word in large texts in ~1–2 seconds using a sublinear‑space sketch.</li>
+    <li>Memory usage bounded and tunable (ε, δ); handled multi‑MB files without growing counters per-word.</li>
+    <li>Accuracy matched exact counts on top‑k words in tests (practically “to the dot” on heavy hitters).</li>
+    <li>Built a clean ingestion pipeline: tokenize → hash-family → 2D counter array → query.</li>
+  </ul>
 
 
 
