--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   </ul>
 
  
-  <h3><a href="Projects/countminsketch.html"></a>Count-Min Sketch- Randomized Algorithms (Programming)</h3>
+  <h3><a href="Projects/countminsketch.html">Count-Min Sketch- Randomized Algorithms (Programming)</a></h3>
   <p><strong>Results/My Impact:</strong></p>
   <ul class="project-results">
     <li>Found the most frequent word in large texts in ~1–2 seconds using a sublinear‑space sketch.</li>
