--- a/Projects/countminsketch.html
+++ b/Projects/countminsketch.html
@@ -9,85 +9,67 @@
 <body>
   <nav class="navbar">
     <a href="../index.html">← Back to Home</a>
+    <a href="../index.html#work">Selected Work</a>
   </nav>
 
   <main>
     <h1>Count‑Min Sketch (CMS): Streaming Word Frequency Estimation</h1>
 
     <p>
-      I implemented a <strong>Count‑Min Sketch</strong> to estimate word frequencies in large text streams,
-      then used it to surface the most frequent words across multiple English translations of a long text.
-      The CMS delivers near‑instant queries with <strong>sublinear memory</strong>, making it ideal for
-      streaming/large‑file scenarios where exact counting is expensive.
+      For a randomized algorithms project at Middlebury, I implemented a <strong>Count‑Min Sketch</strong> to estimate
+      word frequencies in large text streams. I used it on long English text files and surfaced the most
+      frequent words quickly, with a small, fixed memory footprint.
     </p>
 
-    <h2>Why Count‑Min Sketch?</h2>
+    <h2>What I Built</h2>
     <ul>
-      <li><strong>Speed:</strong> O(1) update and O(1) query (amortized) per hash function.</li>
-      <li><strong>Small memory:</strong> Fixed 2D array instead of a map of all distinct words.</li>
-      <li><strong>Tunable error:</strong> Choose width/depth to bound overestimation with parameters (ε, δ).</li>
+      <li><strong>Pipeline:</strong> read → normalize (lowercase, strip punctuation) → tokenize → stream through CMS → report top‑k.</li>
+      <li><strong>Sketch layout:</strong> a small <em>d × w</em> counter table; I used <strong>w ≈ 397</strong> (prime width) and <strong>d = 3</strong> rows.</li>
+      <li><strong>Hashing:</strong> three independent hash functions via distinct seeds over a fast string hash.</li>
+      <li><strong>Top‑k tracking:</strong> maintained a tiny heap of candidate heavy hitters while streaming.</li>
+      <li><strong>Validation:</strong> compared sketch estimates to exact counts on samples / final pass to confirm top entries.</li>
     </ul>
 
-    <h2>How It Works (Brief)</h2>
+    <h2>How CMS Works (brief)</h2>
     <p>
-      Maintain a <strong>d × w</strong> array of counters. For each arriving token <code>x</code>, hash it with
-      <code>d</code> independent functions <code>h<sub>1..d</sub></code> and increment
-      <code>table[i][h_i(x)]</code>. The estimated count of <code>x</code> is the
-      <em>minimum</em> across its <code>d</code> counters (hence “min”).
+      A CMS is a compact table of counters with <strong>d</strong> rows and <strong>w</strong> columns. Each incoming token is hashed
+      with <strong>d</strong> independent hash functions—one per row—and we increment the corresponding counters. The
+      estimated count of a token is the <em>minimum</em> of those <strong>d</strong> counters, which limits overestimation caused by collisions.
     </p>
 
     <figure style="text-align:center;">
-      <img src="../images/cms_diagram.png" alt="Illustrative diagram of Count-Min Sketch with d hash rows mapping a word to d counters"
+      <img src="../images/cms_diagram.png"
+           alt="Count‑Min Sketch diagram: multiple hash functions mapping a word to d counters"
            style="width:100%; max-width:680px; display:block; margin:20px auto; border-radius:8px;">
       <figcaption style="font-size:.85em; color:gray;">
-        Stylized CMS layout (illustrative; not to scale).
+        Stylized CMS layout I used (illustrative).
       </figcaption>
     </figure>
 
-    <h2>Parameter Choices</h2>
-    <p>
-      CMS error guarantees are controlled by width <code>w</code> and depth <code>d</code>:
-    </p>
+    <h2>Practical Choices &amp; Trade‑offs</h2>
     <ul>
-      <li><strong>w ≈ e/ε</strong> bounds the additive error to at most <code>ε · N</code> with high probability.</li>
-      <li><strong>d ≈ ln(1/δ)</strong> drives the failure probability below <code>δ</code>.</li>
-    </ul>
-    <p>
-      Practically, pick <code>w</code> as a convenient prime (e.g., ~400–4000) and <code>d</code> as 3–5 rows.
-      I used multiple independent hash seeds over a fast string hash for <em>h<sub>i</sub></em>.
-    </p>
-
-    <h2>Pipeline</h2>
-    <ul>
-      <li><strong>Ingest:</strong> Read text stream; lowercase; strip punctuation; tokenize.</li>
-      <li><strong>Update:</strong> For each token, update CMS counters across <code>d</code> rows.</li>
-      <li><strong>Query:</strong> Estimate counts with <em>min</em> across rows; track top‑k as you stream.</li>
-      <li><strong>Validate:</strong> Compare top‑k against exact map on smaller samples (or final pass).</li>
+      <li><strong>Table size:</strong> I chose a <em>prime</em> width (~397) to spread hashes well without using much memory.</li>
+      <li><strong>Depth:</strong> 3 rows was enough to stabilize estimates and keep updates fast.</li>
+      <li><strong>Speed/memory:</strong> O(1)‑like update and query per row; fixed memory regardless of unique vocabulary.</li>
+      <li><strong>Post‑processing:</strong> used a small heap to keep likely top words without scanning everything again.</li>
     </ul>
 
     <h2>Results</h2>
     <ul class="project-results">
-      <li>Identified the most frequent words in multi‑MB texts in ~<strong>1–2 seconds</strong> on a laptop.</li>
-      <li>Matched exact heavy‑hitters in tests while using a fixed‑size sketch (no per‑word growth).</li>
-      <li>Swappable hash families and parameters let me trade memory for accuracy on demand.</li>
-    </ul>
-
-    <h2>Complexity</h2>
-    <ul>
-      <li><strong>Update:</strong> O(d) per token (constant in practice).</li>
-      <li><strong>Query:</strong> O(d) per key; O(1) if tracking top‑k during streaming.</li>
-      <li><strong>Space:</strong> O(d·w) integers — fixed and independent of unique word count.</li>
+      <li>Identified the most frequent words in multi‑MB inputs in ~<strong>1–2 seconds</strong> on a laptop.</li>
+      <li>Matched exact counts on the top words we checked (heavy hitters), while using a fixed‑size sketch.</li>
+      <li>Handled long inputs without storing a counter per distinct word.</li>
     </ul>
 
     <h2>Notes &amp; Extensions</h2>
     <ul>
-      <li>Heavy‑hitter tracking with a small heap during streaming avoids a full pass later.</li>
-      <li>Can combine with a stop‑word list or stemming to analyze semantics across translations.</li>
-      <li>For exactness on small inputs, fall back to a hashmap; use CMS for the big stuff.</li>
+      <li>Swap in different hash seeds or widen the table for noisier corpora.</li>
+      <li>Optionally remove stop‑words or apply stemming if you care about semantics.</li>
+      <li>For small inputs, a hashmap is fine; CMS shines when inputs get large or streaming.</li>
     </ul>
 
     <p style="font-style:italic; color:gray;">
-      This page highlights algorithm design and implementation details only; diagrams are illustrative.
+      This page reflects my implementation and tests. Diagrams are illustrative; numbers are from my runs and sanity checks.
     </p>
 
     <p><a href="../index.html#work">← Back to Selected Work</a></p>
@@ -96,5 +78,8 @@
   <footer>
     <p>&copy; 2025 Masrur Chowdhury</p>
   </footer>
+</body>
+</html>
+
 </body>
 </html>
