--- a/Projects/countminsketch.html
+++ b/Projects/countminsketch.html
@@ -38,7 +38,7 @@
     </p>
 
     <figure style="text-align:center;">
-      <img src="../images/cms_diagram.png"
+      <img src="../images/countminsketch.png"
            alt="Count‑Min Sketch diagram: multiple hash functions mapping a word to d counters"
            style="width:100%; max-width:680px; display:block; margin:20px auto; border-radius:8px;">
       <figcaption style="font-size:.85em; color:gray;">
