--- a/Projects/primertest.html
+++ b/Projects/primertest.html
@@ -46,7 +46,7 @@
           primer dwell time, bond timing, and cure time</strong> for each sample set.</li>
     </ul>
 
-    <!-- Optional illustrative image (generic) -->
+    <!-- Optional illustrative image (generic) 
     <figure style="text-align:center;">
       <img
         src="../images/primer_push_shear_schematic.png"
@@ -57,6 +57,8 @@
         Generic schematic of push/shear rig with load distribution and pressure sensing (illustrative only).
       </figcaption>
     </figure>
+
+    -->
 
     <h2>Results</h2>
     <ul class="project-results">
