--- a/Projects/countminsketch.html
+++ b/Projects/countminsketch.html
@@ -17,7 +17,7 @@
     <p>
       For a randomized algorithms project at Middlebury, I implemented a <strong>Count‑Min Sketch</strong> to estimate
       word frequencies in large text streams. I used it on long English text files and surfaced the most
-      frequent words quickly, with a small, fixed memory footprint.
+      frequent words quickly, with a small, fixed memory footprint. Top k is the most frequent word that would appear in the given text. 
     </p>
 
     <h2>What I Built</h2>
