--- a/Projects/coldatom.html
+++ b/Projects/coldatom.html
@@ -24,7 +24,7 @@
 
     <!-- Schematic (illustrative) -->
     <figure style="text-align:center;">
-      <img src="../images/cold_atom_overview.png"
+      <img src="../images/Lasercolling_schem.png"
            alt="Illustrative schematic of cold-atom Rb setup with three laser beams, fiber delivery, MOT region, magnetic coils"
            style="width:100%; max-width:760px; display:block; margin:20px auto; border-radius:8px;">
       <figcaption style="font-size:.85em; color:gray;">
@@ -53,7 +53,7 @@
     <ul class="project-results">
       <li>Improved the test setup for observing quantum behavior in laser‑cooled Rb—<strong>longer, more stable runs</strong>.</li>
       <li>Established <strong>in‑house custom fiber</strong> builds → faster reconfiguration and reduced dependence on long lead‑time orders.</li>
-      <li>~<strong>90%</strong> splice retention typical, keeping optical power budgets healthy across the system.</li>
+      <li>~<strong>90%</strong> splice retention is typical, keeping optical power budgets healthy across the system.</li>
       <li>Smoother daily startup: less time re‑aligning, more time <strong>on experiment</strong>.</li>
     </ul>
 
@@ -62,11 +62,11 @@
     <section class="photo-grid">
       <!-- Replace filenames with yours -->
       <figure>
-        <img src="../images/fusion_splicer.jpg" alt="Fusion splicer used for in-house fiber builds">
+        <img src="../images/splicer.png" alt="Fusion splicer used for in-house fiber builds">
         <figcaption style="font-size:.85em; color:gray;">Fusion splicer brought into the lab workflow.</figcaption>
       </figure>
       <figure>
-        <img src="../images/custom_fiber_splice.jpg" alt="Close-up of custom fiber splice with measured throughput">
+        <img src="../images/customfiber.png" alt="Close-up of custom fiber splice with measured throughput">
         <figcaption style="font-size:.85em; color:gray;">Custom splice; ~90% power retention typical.</figcaption>
       </figure>
       <figure>
