--- a/Projects/coldatom.html
+++ b/Projects/coldatom.html
@@ -69,8 +69,8 @@
         <figcaption style="font-size:.85em; color:gray;">Custom splice; ~90% power retention typical.</figcaption>
       </figure>
       <figure>
-        <img src="../images/table_fiber_routing.jpg" alt="Optical table showing fiber routing and collimator mounts">
-        <figcaption style="font-size:.85em; color:gray;">Fiber routing and collimators for stable delivery.</figcaption>
+        <img src="../images/benchwithmates.png" alt="Optical table showing fiber routing and collimator mounts">
+        <figcaption style="font-size:.85em; color:gray;">Fiber routing and bench setup.</figcaption>
       </figure>
     </section>
 
