--- a/Projects/encoder.html
+++ b/Projects/encoder.html
@@ -37,7 +37,7 @@
 
   <h2>Testing and Signal Processing</h2>
   <p>
-    I tested the encoder using a benchtop motion stage that incrementally rotated the reflective surface while monitoring sensor output on a serial monitor and MATLAB plots. The processed signal was passed through a simple QAM-based decoder to resolve position data, which we validated against known step sizes.
+    I tested the encoder using a benchtop motion stage that incrementally rotated the reflective surface while monitoring sensor output on a serial monitor and MATLAB plots. The processed signal was passed through a simple QAM-based decoder to resolve position data, which we validated against known step sizes on the encoded reflective strips I made. 
   </p>
 
   <p>
